[gd_scene load_steps=18 format=3 uid="uid://bswpqy6y0lu2w"]

[ext_resource type="Script" path="res://Scenens/UI/battle_ui.gd" id="1_fp24k"]
[ext_resource type="Script" path="res://Scenens/battles/battle.gd" id="1_nbi51"]
[ext_resource type="Script" path="res://Scenens/UI/hand.gd" id="2_w1yoi"]
[ext_resource type="PackedScene" uid="uid://na7xjh4xmxt1" path="res://Scenens/card_ui/mana_ui.tscn" id="3_s52uo"]
[ext_resource type="Resource" uid="uid://fjexpek5g45d" path="res://characters/warrior/warrior.tres" id="4_mwp2v"]
[ext_resource type="PackedScene" uid="uid://dqnj3xev5o0a2" path="res://Scenens/UI/tool_tip.tscn" id="5_67w18"]
[ext_resource type="Theme" uid="uid://ck1s4yxndb421" path="res://main_theme.tres" id="6_cluv4"]
[ext_resource type="PackedScene" uid="uid://2mrb5uhnus1u" path="res://Scenens/card_target_selector/card_target_selector.tscn" id="7_bn4dw"]
[ext_resource type="PackedScene" uid="uid://dmqt2n40u1fqg" path="res://Player/player.tscn" id="9_as1fh"]
[ext_resource type="Script" path="res://Player/player_handler.gd" id="10_wg5tp"]
[ext_resource type="Script" path="res://test (delete)/summon_handler.gd" id="11_02ptc"]
[ext_resource type="Texture2D" uid="uid://cp4iq5fd6j8be" path="res://art/background.png" id="11_o6d2p"]
[ext_resource type="PackedScene" uid="uid://fbs5u5joyarj" path="res://enemy/enemy.tscn" id="13_xn6rp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ve2y6"]
size = Vector2(385, 144)

[sub_resource type="CircleShape2D" id="CircleShape2D_mn1w2"]
radius = 12.0416

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_yj2am"]
scenes/1/scene = ExtResource("13_xn6rp")

[sub_resource type="TileSet" id="TileSet_d7v85"]
tile_size = Vector2i(20, 20)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetScenesCollectionSource_yj2am")

[node name="TEST" type="Node2D"]
script = ExtResource("1_nbi51")
char_stats = ExtResource("4_mwp2v")

[node name="BattleUI" type="CanvasLayer" parent="." groups=["ui_layer"]]
script = ExtResource("1_fp24k")

[node name="Hand" type="HBoxContainer" parent="BattleUI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -30.0
offset_right = 75.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
script = ExtResource("2_w1yoi")

[node name="ManaUI" parent="BattleUI" instance=ExtResource("3_s52uo")]
char_stats = ExtResource("4_mwp2v")

[node name="ToolTip" parent="BattleUI" instance=ExtResource("5_67w18")]
offset_left = -53.0
offset_top = 10.0
offset_right = 57.0
offset_bottom = 46.0

[node name="EndTurnButton" type="Button" parent="BattleUI"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -44.0
offset_top = -16.0
offset_right = 1.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("6_cluv4")
text = "End Turn"

[node name="CardDropArea" type="Area2D" parent="BattleUI"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BattleUI/CardDropArea"]
position = Vector2(192.5, 72)
shape = SubResource("RectangleShape2D_ve2y6")

[node name="CardTargetSelector" parent="." instance=ExtResource("7_bn4dw")]

[node name="Player" parent="." instance=ExtResource("9_as1fh")]
position = Vector2(-62, 22)

[node name="PlayerHandler" type="Node" parent="." node_paths=PackedStringArray("hand")]
script = ExtResource("10_wg5tp")
hand = NodePath("../BattleUI/Hand")

[node name="SummonHandler" type="Node" parent="."]
script = ExtResource("11_02ptc")

[node name="cardSpawn" type="Area2D" parent="SummonHandler"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SummonHandler/cardSpawn"]
position = Vector2(177, 160)
shape = SubResource("CircleShape2D_mn1w2")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.346569, 0.346569, 0.346569, 1)
scale = Vector2(1.5, 1.5)
texture = ExtResource("11_o6d2p")
centered = false

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray(0, 0, 18, 0, 9, 0, 0, 0, 0, 0, 0, 0, 1, 0, 4, 0, 3, 0, 0, 0, 0, 0, 0, 0, 1, 0, 16, 0, 2, 0, 0, 0, 0, 0, 0, 0, 1, 0, 2, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0)
tile_set = SubResource("TileSet_d7v85")

[connection signal="area_entered" from="SummonHandler/cardSpawn" to="." method="_on_card_spawn_area_entered"]
[connection signal="area_entered" from="SummonHandler/cardSpawn" to="SummonHandler" method="_on_card_spawn_area_entered"]
